# news-feed

./: .gitignore
backend/: .env  Cargo.toml
backend/src/: cache.rs  job.rs  main.rs  model.rs
frontend/: Cargo.toml  index.html
frontend/src/: card.rs  card_list.rs  main.rs  props.rs
